--- a/opentok.js-annotations/package.json
+++ b/opentok.js-annotations/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/opentok/annotation-acc-pack/tree/1.0.0/js"
+    "url": "https://github.com/opentok/accelerator-annotation-js"
   },
   "devDependencies": {
     "chai": "^3.3.0",
