--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "test"
   },
   "scripts": {
+    "build-css": "npm-css css/annotation.css -o dist/annotation.css",
+    "build-js": "concat -o dist/opentok-annotation.js src/* && uglifyjs dist/opentok-annotation.js -o dist/opentok-annotation.min.js",
+    "build-images": "cp -r images/ dist/images/",
+    "build": "mkdir -p dist && npm run build-js & npm run build-css & npm run build-images",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -25,24 +29,12 @@
   },
   "devDependencies": {
     "chai": "^3.3.0",
+    "concat": "^3.0.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.10.2",
-    "gulp": "^3.9.0",
-    "gulp-amd-optimizer": "^0.3.4",
-    "gulp-amdclean": "^1.1.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-docco": "0.0.4",
-    "gulp-if": "^2.0.0",
-    "gulp-import-css": "^0.1.2",
-    "gulp-inline-css": "^3.1.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.3",
-    "gulp-webserver": "^0.9.1",
-    "gulp-yuidoc": "^0.1.2",
-    "gulp-zip": "^3.2.0",
     "karma": "^0.13.10",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.2.0",
@@ -52,8 +44,10 @@
     "karma-sinon": "^1.0.4",
     "merge-stream": "^1.0.0",
     "mocha": "^2.3.3",
+    "npm-css": "^0.2.3",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.0",
+    "uglify-js": "^2.8.15",
     "yuidocjs": "^0.9.0"
   },
   "dependencies": {
