--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-js": "concat -o dist/opentok-annotation.js src/* && uglifyjs dist/opentok-annotation.js -o dist/opentok-annotation.min.js",
     "build-images": "cp -r images/ dist/images/",
     "build": "mkdir -p dist && npm run build-js & npm run build-css & npm run build-images",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start"
   },
   "keywords": [
     "opentok",
@@ -28,26 +28,35 @@
     "url": "https://github.com/opentok/accelerator-annotation-js"
   },
   "devDependencies": {
-    "chai": "^3.3.0",
+    "babel-plugin-espower": "^2.3.2",
+    "babelify": "^7.3.0",
+    "browserify": "^14.1.0",
+    "chai": "^3.5.0",
     "concat": "^3.0.0",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.10.2",
-    "karma": "^0.13.10",
+    "karma": "^1.5.0",
+    "karma-browserify": "^5.1.1",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^0.2.0",
-    "karma-firefox-launcher": "^0.1.6",
-    "karma-mocha": "^0.2.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.1",
+    "karma-html2js-preprocessor": "^1.1.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-requirejs": "^0.2.2",
+    "karma-sauce-launcher": "^1.1.0",
     "karma-sinon": "^1.0.4",
     "merge-stream": "^1.0.0",
-    "mocha": "^2.3.3",
+    "mocha": "^3.2.0",
     "npm-css": "^0.2.3",
     "rimraf": "^2.4.3",
     "sinon": "^1.17.0",
     "uglify-js": "^2.8.15",
+    "watchify": "^3.9.0",
     "yuidocjs": "^0.9.0"
   },
   "dependencies": {
