--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,10 @@ node_js:
 - '4.4'
 env:
 - SAUCE_USERNAME=opentok
+before_install:
+- export CHROME_BIN=chromium-browser
+- export DISPLAY=:99.0
+- sh -e /etc/init.d/xvfb start
 script:
   - npm run build;
   - npm test;
