--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,7 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 script:
   - npm run build;
-  - npm test;
-  - if [[ "$TRAVIS_PULL_REQUEST" = "false" ]]; then
-      bash <(curl -s https://codecov.io/bash);
-    fi
+  - npm test && bash <(curl -s https://codecov.io/bash);
   - VER_DEPL=$(npm show opentok-annotation version);
   - VERSION=$(jq '.version' package.json | sed -e 's/^"//' -e 's/"$//');
 deploy:
