--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "test": "test"
   },
   "scripts": {
-    "build:css": "npm-css css/annotation.css -o dist/annotation.css",
-    "build:js": "concat -o dist/opentok-annotation.js src/* && uglifyjs dist/opentok-annotation.js -o dist/opentok-annotation.min.js",
-    "build:images": "cp -r images/ dist/images/",
-    "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version dist/*",
-    "build": "mkdir -p dist && npm run build:js & npm run build:css & npm run build:images && npm run build:logversion",
+    "build:css": "copyfiles css/*.css dist/",
+    "build:js": "concat -o dist/opentok-annotation.js src/acc-pack-annotation.js src/annotation-widget.js && uglifyjs dist/opentok-annotation.js -o dist/opentok-annotation.min.js",
+    "build:images": "copyfiles images/**/* dist/",
+    "build:logversion": "replace '(js-vsol-)(x.y.z)' '$1'$npm_package_version ./dist",
+    "build": "mkdir dist && npm run build:js & npm run build:css & npm run build:images && npm run build:logversion",
     "test": "karma start"
   },
   "keywords": [
@@ -29,41 +29,39 @@
     "url": "https://github.com/opentok/accelerator-annotation-js"
   },
   "devDependencies": {
-    "babel-plugin-espower": "^2.3.2",
-    "babelify": "^7.3.0",
-    "browserify": "^14.1.0",
-    "chai": "^3.5.0",
+    "babel-plugin-espower": "^3.0.1",
+    "babelify": "^10.0.0",
+    "browserify": "^16.5.2",
+    "chai": "^4.2.0",
     "concat": "^3.0.0",
+    "copyfiles": "^2.3.0",
+    "coverage": "^0.4.1",
     "eslint": "^3.18.0",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.10.2",
-    "karma": "^1.7.1",
-    "karma-browserify": "^5.1.1",
+    "html2js": "^0.2.0",
+    "karma": "^5.1.1",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage": "^1.1.1",
-    "karma-firefox-launcher": "^1.0.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
     "karma-html2js-preprocessor": "^1.1.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-requirejs": "^0.2.2",
-    "karma-sauce-launcher": "^1.2.0",
-    "karma-sinon": "^1.0.4",
-    "merge-stream": "^1.0.0",
-    "mocha": "^3.5.3",
-    "npm-css": "^0.2.3",
+    "karma-mocha": "^2.0.1",
+    "karma-requirejs": "^1.1.0",
+    "karma-sinon": "^1.0.5",
+    "merge-stream": "^2.0.0",
+    "mocha": "^8.1.3",
     "replace": "^0.3.0",
-    "rimraf": "^2.4.3",
-    "sinon": "^1.17.0",
-    "uglify-js": "^2.8.15",
-    "watchify": "^3.9.0",
-    "yuidocjs": "^0.9.0"
+    "rimraf": "^3.0.2",
+    "sinon": "^9.0.3",
+    "uglify-js": "^3.10.2",
+    "watchify": "^3.11.1",
+    "yuidocjs": "^0.10.2"
   },
   "dependencies": {
-    "jquery": "^3.1.0",
-    "opentok-solutions-logging": "^1.0.6",
-    "underscore": "^1.8.3"
+    "jquery": "^3.5.1",
+    "opentok-solutions-logging": "^1.1.0",
+    "underscore": "^1.11.0"
   }
 }
